"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-10-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-85-router-01-11:
	  Scheme additions only for chpsim trace (scm/ChangeLog).
	  Test cases updated accordingly.  


2007-10-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-85-router-01-10:
	  No source revision.
	  More 4-channel router tests with "interesting" input characteristics
		and sensitivity comparison.  
	  TODO: call event-criticality histogram and sort through results.


2007-10-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-85-router-01-09:
	  No source revision.
	  Added more 4-channel tests.
	  All router tests pushed down to new router/ subdir to unclutter
		the parent chpsim/ dir.  


	* HACKT-00-01-04-main-00-81-85-router-01-08:
	  No source revision.
	  First batch of 4-channel bit-router tests in test/chpsim.


2007-10-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-85-router-01-07:
	  No source revision.
	  Re-factored bitrouter test cases to make it trivial to 
		change the environment for future sensitivity tests.  


2007-10-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-85-router-01-06:
	  No source revision.
	  Another batch of bitrouter tests with more interesting input pattern.


2007-10-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-85-router-01-05:
	  Scheme functions edited, see scm/ChangeLog.  
	  More bitrouter tests...


2007-10-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-85-router-01-04:
	  No source revision, more bit-router tests with
		lengthened packet separation.
	  Next: vary packet length


	* HACKT-00-01-04-main-00-81-85-router-01-03:
	  No source revision, more bit-router tests.  