@@ -3,6 +3,13 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2007-11-26	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-85-router-01-12:
+	  No source revision, merge to trunk, split-off later for next 
+		test case studies.
+
+
 2007-10-22	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-81-85-router-01-11:
